# ygot

./: BUILD.bazel  BUILD.bazel.bak  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-ygot  go.mod  go.sum
demo/bgp/: BUILD.bazel  main.go  main_test.go
demo/device/: BUILD.bazel  devicedemo.go  devicedemo_test.go
demo/getting_started/: BUILD.bazel  interfaces.go  interfaces_test.go
demo/gnmi_telemetry/: BUILD.bazel  gnmi.go  gnmi_test.go
demo/optical/: BUILD.bazel  opticaldemo.go  opticaldemo_test.go
demo/protobuf_getting_started/: BUILD.bazel  demo.go  demo_test.go  update.sh
demo/uncompressed/: BUILD.bazel  uncompressed.go  uncompressed_test.go
exampleocpath/: BUILD.bazel  update.sh
experimental/ygotutils/: BUILD.bazel  getnode.go  getnode_test.go
generator/: BUILD.bazel  generator.go  generator_test.go
genutil/: BUILD.bazel  common.go  names_test.go
integration_tests/uncompressed/: BUILD.bazel  cp_test.go
integration_tests/uncompressed/cschema/: BUILD.bazel
integration_tests/uncompressed/uschema/: BUILD.bazel
integration_tests/uncompressed/yang/: uncompressed.yang
proto/yext/: B.b  BUILD.bazel  gen.go  yext.pb.go  yext.pb.go.bak  yext.proto
proto/ywrapper/: B.b  BUILD.bazel  gen.go  ywrapper.pb.go  ywrapper.pb.go.bak  ywrapper.proto
proto_generator/: BUILD.bazel  protogenerator.go
testcmp/: BUILD.bazel  cmp.go  cmp_test.go
testutil/: BUILD.bazel  testutil_test.go
uexampleoc/: BUILD.bazel  oc.go
util/: BUILD.bazel  reflect_test.go
ygen/: BUILD.bazel  codegen.go  codegen_test.go  directory.go  genstate.go  genstate_test.go  goelements.go  goelements_test.go  gogen.go  gogen_test.go  helpers.go  protoelements.go  protogen.go  protogen_test.go  schemaparse.go  schemaparse_test.go  schematree.go
ygen/schema_tests/: BUILD.bazel  schema_test.go
ygen/testdata/proto/: cross-ref-src.formatted-txt  excluded-config-false.compressed.formatted-txt  excluded-config-false.config_false.compressed.formatted-txt  excluded-config-false.uncompressed.formatted-txt  fakeroot-multimod.formatted-txt  nested-messages.compressed.enums.formatted-txt  nested-messages.compressed.nested_messages.formatted-txt  nested-messages.nested_messages.formatted-txt  nested-messages.openconfig.formatted-txt  proto-enums-addid.enums.formatted-txt  proto-enums-addid.formatted-txt  proto-enums.enums.formatted-txt  proto-enums.formatted-txt  proto-test-a.compress.parent.child.formatted-txt  proto-test-a.compress.parent.formatted-txt  proto-test-a.nocompress.formatted-txt  proto-test-a.nocompress.parent.child.formatted-txt  proto-test-a.nocompress.parent.formatted-txt  proto-test-b.compress.device.formatted-txt  proto-test-b.compress.formatted-txt  proto-test-c.proto-test-c.elists.elist.formatted-txt  proto-test-c.proto-test-c.elists.formatted-txt  proto-test-c.proto-test-c.entity.formatted-txt  proto-test-c.proto-test-c.formatted-txt  proto-test-d.uncompressed.enums.formatted-txt  proto-test-d.uncompressed.proto-test-d.formatted-txt  proto-test-d.uncompressed.proto-test-d.test.formatted-txt  proto-test-e.uncompressed.enums.formatted-txt  proto-test-e.uncompressed.proto-test-e.animals.animal.formatted-txt  proto-test-e.uncompressed.proto-test-e.animals.formatted-txt  proto-test-e.uncompressed.proto-test-e.bars.formatted-txt  proto-test-e.uncompressed.proto-test-e.foos.foo.formatted-txt  proto-test-e.uncompressed.proto-test-e.foos.formatted-txt  proto-test-e.uncompressed.proto-test-e.formatted-txt  proto-test-e.uncompressed.proto-test-e.test.formatted-txt  proto-union-list-key.compressed.openconfig.formatted-txt  proto-union-list-key.compressed.openconfig.routing_policy.formatted-txt  proto-union-list-key.uncompressed.openconfig.proto_union_list_key.formatted-txt  proto-union-list-key.uncompressed.openconfig.proto_union_list_key.routing_policy.formatted-txt  proto-union-list-key.uncompressed.openconfig.proto_union_list_key.routing_policy.policies.formatted-txt  (+11 more)
ygen/testdata/schema/: openconfig-options-compress-fakeroot.formatted-txt  openconfig-options-compress.formatted-txt  openconfig-options-nocompress-fakeroot.formatted-txt  openconfig-options-nocompress.formatted-txt
ygen/testdata/structs/: choice-case-example.formatted-txt  empty.formatted-txt  enum-list-uncompressed.formatted-txt  enum-module.formatted-txt  exclude-state-ro-list.formatted-txt  excluded-module.formatted-txt  openconfig-augmented.formatted-txt  openconfig-camelcase-compress.formatted-txt  openconfig-config-false-compressed.formatted-txt  openconfig-config-false-uncompressed.formatted-txt  openconfig-enumcamelcase-compress.formatted-txt  openconfig-fakeroot-nc.formatted-txt  openconfig-fakeroot.formatted-txt  openconfig-list-enum-key.formatted-txt  openconfig-list-enum-key.getters-append.formatted-txt  openconfig-list-enum-key.leaf-getters.formatted-txt  openconfig-simple-annotations.formatted-txt  openconfig-simple-no-compress.formatted-txt  openconfig-simple.formatted-txt  openconfig-unione.formatted-txt  openconfig-withlist.formatted-txt  (+2 more)
ygot/: BUILD.bazel  diff.go  diff_test.go  pathstrings.go  proto.go  proto_test.go  render.go  render_test.go  schema_test.go  struct_validation_map.go  struct_validation_map_test.go
ygot/pathtranslate/: BUILD.bazel
ygot/schema_tests/: BUILD.bazel  schema_test.go
ypathgen/: BUILD.bazel  pathgen.go  pathgen_test.go
ypathgen/generator/: BUILD.bazel  generator.go  generator_test.go
ypathgen/path_tests/: BUILD.bazel  path_test.go
ytypes/: BUILD.bazel  binary_type.go  binary_type_test.go  choice.go  choice_test.go  common_test.go  container.go  container_test.go  decimal_type_test.go  empty_type.go  int_type.go  int_type_test.go  leaf.go  leaf_list.go  leaf_list_test.go  leaf_test.go  leafref.go  leafref_test.go  list.go  list_test.go  node.go  node_test.go  string_type_test.go  types.go  types_test.go  unmarshal.go  util_json.go  util_schema.go  util_test.go  util_types.go  validate.go  validate_test.go
ytypes/schema_tests/: BUILD.bazel  diff_benchmark_test.go  get_test.go  leafref_benchmark_test.go  race_test.go  set_test.go  validate_test.go
(+39 files in other folders)
