load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ocpath.go",
        "ocpath_augment.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/exampleocpath",
    visibility = ["//visibility:public"],
    deps = [
        "//exampleoc:go_default_library",
        "//ygot:go_default_library",
        "@gnmi_repository//:gnmi_go_proto",
    ],
)
