load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "file.go",
        "names.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/genutil",
    visibility = ["//visibility:public"],
    deps = [
        "//util:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "common_test.go",
        "names_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)
