load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["protogenerator.go"],
    importpath = "github.com/michaelhenkel/ygot/proto_generator",
    visibility = ["//visibility:private"],
    deps = [
        "//genutil:go_default_library",
        "//ygen:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_binary(
    name = "proto_generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
