load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cmp.go"],
    importpath = "github.com/michaelhenkel/ygot/testcmp",
    visibility = ["//visibility:public"],
    deps = [
        "//testutil:go_default_library",
        "//ygot:go_default_library",
        "//ytypes:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cmp_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//exampleoc:go_default_library",
        "//testutil:go_default_library",
        "//uexampleoc:go_default_library",
        "//ygot:go_default_library",
        "//ytypes:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@com_github_openconfig_gnmi//errdiff:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
    ],
)
