load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "testutil.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
        "@com_github_openconfig_gnmi//value:go_default_library",
        "@com_github_pmezard_go_difflib//difflib:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "diff_test.go",
        "testutil_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//ygot:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
    ],
)
