load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "debug.go",
        "errs.go",
        "gnmi.go",
        "path.go",
        "reflect.go",
        "yang.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "debug_test.go",
        "errs_test.go",
        "gnmi_test.go",
        "path_test.go",
        "reflect_test.go",
        "yang_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//testutil:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@com_github_openconfig_gnmi//errdiff:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)
