load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "codegen.go",
        "directory.go",
        "genstate.go",
        "goelements.go",
        "gogen.go",
        "helpers.go",
        "protoelements.go",
        "protogen.go",
        "schemaparse.go",
        "schematree.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/ygen",
    visibility = ["//visibility:public"],
    deps = [
        "//genutil:go_default_library",
        "//util:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@gnmi_repository//:go_ctree_library",
        "@gnmi_repository//:go_errlist_library",
        "@gnmi_repository//:gnmi_go_proto",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "codegen_test.go",
        "directory_test.go",
        "genstate_test.go",
        "goelements_test.go",
        "gogen_test.go",
        "helpers_test.go",
        "protoelements_test.go",
        "protogen_test.go",
        "schemaparse_test.go",
        "schematree_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//genutil:go_default_library",
        "//testutil:go_default_library",
        "//ygot:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@gnmi_repository//:go_errdiff_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)
