load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pathgen.go"],
    importpath = "github.com/michaelhenkel/ygot/ypathgen",
    visibility = ["//visibility:public"],
    deps = [
        "//genutil:go_default_library",
        "//util:go_default_library",
        "//ygen:go_default_library",
        "//ygot:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pathgen_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//testutil:go_default_library",
        "//ygen:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@gnmi_repository//:go_errdiff_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)
