load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "any_type.go",
        "binary_type.go",
        "bitset_type.go",
        "bool_type.go",
        "choice.go",
        "common.go",
        "container.go",
        "decimal_type.go",
        "empty_type.go",
        "int_type.go",
        "leaf.go",
        "leaf_list.go",
        "leafref.go",
        "list.go",
        "node.go",
        "string_type.go",
        "types.go",
        "unmarshal.go",
        "util_json.go",
        "util_schema.go",
        "util_types.go",
        "validate.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/ytypes",
    visibility = ["//visibility:public"],
    deps = [
        "//util:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@gnmi_repository//:gnmi_go_proto",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "any_type_test.go",
        "binary_type_test.go",
        "bitset_type_test.go",
        "bool_type_test.go",
        "choice_test.go",
        "common_test.go",
        "container_test.go",
        "decimal_type_test.go",
        "empty_type_test.go",
        "int_type_test.go",
        "leaf_list_test.go",
        "leaf_test.go",
        "leafref_test.go",
        "list_test.go",
        "node_test.go",
        "string_type_test.go",
        "types_test.go",
        "unmarshal_test.go",
        "util_test.go",
        "validate_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//util:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@gnmi_repository//:go_errdiff_library",
        "@gnmi_repository//:gnmi_go_proto",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)
