load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gnmi.go"],
    importpath = "github.com/michaelhenkel/ygot/demo/gnmi_telemetry",
    visibility = ["//visibility:private"],
    deps = [
        "//exampleoc:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@gnmi_repository//:gnmi_go_proto",
    ],
)

go_binary(
    name = "gnmi_telemetry",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["gnmi_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//ygot:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@gnmi_repository//:gnmi_go_proto",
    ],
)
