load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["opticaldemo.go"],
    importpath = "github.com/michaelhenkel/ygot/demo/optical",
    visibility = ["//visibility:private"],
    deps = [
        "//exampleoc:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "optical",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["opticaldemo_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//testutil:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
    ],
)
