load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["demo.go"],
    importpath = "github.com/michaelhenkel/ygot/demo/protobuf_getting_started",
    visibility = ["//visibility:private"],
    deps = [
        "//demo/protobuf_getting_started/ribproto/openconfig:go_default_library",
        "//demo/protobuf_getting_started/ribproto/openconfig/enums:go_default_library",
        "//demo/protobuf_getting_started/ribproto/openconfig/openconfig_rib_bgp:go_default_library",
        "//proto/ywrapper:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "protobuf_getting_started",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["demo_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//demo/protobuf_getting_started/ribproto/openconfig:go_default_library",
        "//demo/protobuf_getting_started/ribproto/openconfig/enums:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
    ],
)
