load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "getnode.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/experimental/ygotutils",
    visibility = ["//visibility:public"],
    deps = [
        "//util:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@gnmi_repository//:gnmi_go_proto",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
        "@go_googleapis//google/rpc:code_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["getnode_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//ygot:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@gnmi_repository//:gnmi_go_proto",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
        "@go_googleapis//google/rpc:code_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)
