load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cp.go"],
    importpath = "github.com/michaelhenkel/ygot/integration_tests/uncompressed",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["cp_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//integration_tests/uncompressed/cschema:go_default_library",
        "//integration_tests/uncompressed/uschema:go_default_library",
        "//ygot:go_default_library",
    ],
)
