load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = [
        "yext.pb.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/proto/yext",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)

proto_library(
    name = "yext_proto",
    import_prefix = "github.com/michaelhenkel/ygot/proto/yext",
    strip_import_prefix = "/proto/yext",
    srcs = ["yext.proto"],
    visibility = ["//visibility:public"],
    deps = [
                "@com_google_protobuf//:descriptor_proto",
    ],
)

go_proto_library(
    name = "yext_go_proto",
    importpath = "github.com/michaelhenkel/ygot/proto/yext",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    proto = ":yext_proto",
    visibility = ["//visibility:public"],
)
