load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

proto_library(
    name = "yext_proto",
    srcs = ["yext.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "yext_go_proto",
    importpath = "github.com/michaelhenkel/ygot/proto/yext",
    compilers = [":google_proto"],
    proto = ":yext_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@com_github_golang_protobuf_a//proto:go_default_library",
	"@com_github_golang_protobuf_a//protoc-gen-go/descriptor:go_default_library",
    ]
)

go_library(
    name = "go_default_library",
    srcs = ["gen.go"],
    embed = [":yext_go_proto"],
    importpath = "github.com/michaelhenkel/ygot/proto/yext",
    visibility = ["//visibility:public"],
)

go_proto_compiler(
    name = "google_proto",
    suffix = ".pb.go",
    #plugin = "@org_golang_google_protobuf//cmd/protoc-gen-go",
    plugin = "@com_github_golang_protobuf_a//protoc-gen-go",
    visibility = ["//visibility:public"],
)
