load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ywrapper.pb.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/proto/ywrapper",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)

proto_library(
    name = "ywrapper_proto",
    import_prefix = "github.com/michaelhenkel/ygot/proto/ywrapper",
    strip_import_prefix = "/proto/ywrapper",
    srcs = ["ywrapper.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "ywrapper_go_proto",
    importpath = "github.com/michaelhenkel/ygot/proto/ywrapper",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    proto = ":ywrapper_proto",
    visibility = ["//visibility:public"],
)
