load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pathtranslate.go"],
    importpath = "github.com/michaelhenkel/ygot/ygot/pathtranslate",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pathtranslate_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_openconfig_gnmi//errdiff:go_default_library",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)
