load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["schema.go"],
    importpath = "github.com/michaelhenkel/ygot/ygot/schema_tests",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["schema_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//exampleoc:go_default_library",
        "//testutil:go_default_library",
        "//uexampleoc:go_default_library",
        "//ygot:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@gnmi_repository//:go_errdiff_library",
        "@gnmi_repository//:gnmi_go_proto",
        "@gnmi_repository//:go_value_library",
    ],
)
