load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["generator.go"],
    importpath = "github.com/michaelhenkel/ygot/ypathgen/generator",
    visibility = ["//visibility:private"],
    deps = [
        "//genutil:go_default_library",
        "//ypathgen:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_openconfig_goyang//pkg/yang:go_default_library",
    ],
)

go_binary(
    name = "generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["generator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//ypathgen:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
