load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["path.go"],
    importpath = "github.com/michaelhenkel/ygot/ypathgen/path_tests",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["path_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//exampleoc:go_default_library",
        "//exampleocpath:go_default_library",
        "//ygot:go_default_library",
        "//ypathgen:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
