load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "exschemapath.pb.go",
        "gen.go",
    ],
    importpath = "github.com/michaelhenkel/ygot/ygot/testdata/exschemapath",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/yext:go_default_library",
        "//proto/ywrapper:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
