load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gen.go"],
    embed = [":exschemapath_go_proto"],
    importpath = "github.com/michaelhenkel/ygot/ygot/testdata/exschemapath",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "exschemapath_proto",
    srcs = ["exschemapath.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/michaelhenkel/ygot/proto/yext:yext_proto",
        "//github.com/michaelhenkel/ygot/proto/ywrapper:ywrapper_proto",
    ],
)

go_proto_library(
    name = "exschemapath_go_proto",
    importpath = "github.com/michaelhenkel/ygot/ygot/testdata/exschemapath",
    proto = ":exschemapath_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/michaelhenkel/ygot/proto/yext:go_default_library",
        "//github.com/michaelhenkel/ygot/proto/ywrapper:go_default_library",
    ],
)
